fix: add scrollbar-gutter anyways

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -210,6 +210,7 @@ how to remove the vertical space around the range input in IE */
   background: linear-gradient(180deg, #8dc4fc 0%, #e0c3fc 100%);
   height: 5.4rem;
   margin-top: 1.5rem;
+  scrollbar-gutter: stable force;
 }
 
 .now-playing::before {
@@ -273,6 +274,7 @@ how to remove the vertical space around the range input in IE */
 .play-history {
   background: linear-gradient(180deg, #8ec5fc 0%, #e0c3fc 100%);
   height: 12rem;
+  scrollbar-gutter: stable;
 }
 
 .play-history-header {
